<resources>

    <string name="app_name">厦门外包网</string>
    <string name="app_name_full">厦门服务外包网</string>
    
	<!-- 网络异常提示信息  -->
	<string name="prompt_network_connect_timeout">连接超时！</string>
	<string name="prompt_network_read_timeout">读取超时！</string>
	<string name="prompt_network_url_error">url地址无效！</string>
	<string name="prompt_network_error">网络连接失败！</string>
	<string name="prompt_network_receiving_data_error">数据获取失败！</string>
	
	<!-- Dialog 提示信息  -->
	<string name="dl_title_prompt">提示</string>
	<string name="dl_title_error">出错啦</string>
	<string name="dl_msg_receiving_data">正在获取数据&#8230;&#8230;&#8230;</string>
	<string name="dl_msg_update_error">获取最新版本信息失败！</string>
	<string name="dl_btn_ok">确认</string>
	<string name="dl_btn_back">返回</string>
	<string name="dl_btn_confirm">确定</string>
	<string name="dl_btn_cancel">取消</string>
	<string name="dl_btn_quit">退出</string>

	<!-- 列表项相关  -->
	<string name="list_item_no_data">没有数据！</string>
	<string name="list_item_more_msg">更多</string>
	<string name="list_item_loading_data">正在加载</string>
    
    <!-- BaseActivity -->
    <string name="Base_hit_nosdcard">未找到存储卡!</string>
    <string name="Base_hit_createstorefolderfail">无法创建缓存文件!</string>
    <string name="Base_hit_title">提示</string>
    <string name="Base_hit_defaskclosemsg">您确定要退出吗?</string>
    
    <!-- WelcomeActivity -->    
    <string name="welcome_title">欢迎界面</string>
    <string name="welcome_ver">版本:%1$s</string>
	<string name="welcome_url">www.wuzhupc.com</string>
	<string name="welcome_publish">Copyright ©2012 商务中国 版权所有</string>
	<string name="welcome_update_title">发现新版本(V%1$s)</string>
	<string name="welcome_update_title_ex">重大更新(V%1$s)</string>
	<string name="welcome_update_content">更新内容:&#060;br&#047;&#062;%1$s&#060;br&#047;&#062;</string>
	<string name="welcome_update_content_ex">更新内容:&#060;br&#047;&#062;%1$s&#060;br&#047;&#062;&#060;br&#047;&#062;注意: 当前版本需要更新后才能继续使用。&#060;br&#047;&#062;</string>
	<string name="welcome_update_btn">升级</string>
	
	<!-- HomeActivity -->
	<string name="home_initchannel_fail">无法正确解析栏目信息！</string>
	<!-- NewsDetailActivity -->
	<string name="detail_news_title">资讯详情</string>
	<string name="detail_news_content_empty">很抱歉，资讯内容为空。</string>
	<string name="fav_add">已添加到“我的收藏”</string>
	<string name="fav_remove">已取消收藏!</string>
	<!-- View -->
	<string name="person_search_empty">请输入搜索关键字</string>
	<!-- UserView -->
	<string name="userview_nologin">您还未登录</string>
	<string name="userview_changepwd">修改密码</string>
	<string name="userview_changeaccount">切换帐号</string>
	<string name="userview_changeaccount_hit">您确认退出当前登录，更换使用其他帐号登录吗？</string>
	<string name="userview_login"> 登 录 </string>
	<string name="userview_register"> 注 册 </string>
	<string name="userview_consult_info">咨询信息(未查看:&#060;font color=&#034;&#035;FF0000&#034;&#062;%1$s&#060;&#047;font&#062;  全部:&#060;font color=&#034;&#035;CC0000&#034;&#062;%2$s&#060;&#047;font&#062;)</string>
	<string name="userview_audit_info">审核结果(未查看:&#060;font color=&#034;&#035;FF0000&#034;&#062;%1$s&#060;&#047;font&#062;  全部:&#060;font color=&#034;&#035;CC0000&#034;&#062;%2$s&#060;&#047;font&#062;)</string>
	<string name="userview_declare_info">申报进度(未查看:&#060;font color=&#034;&#035;FF0000&#034;&#062;%1$s&#060;&#047;font&#062;  全部:&#060;font color=&#034;&#035;CC0000&#034;&#062;%2$s&#060;&#047;font&#062;)</string>
	<string name="userview_notifier_info">通知提醒(未查看:&#060;font color=&#034;&#035;FF0000&#034;&#062;%1$s&#060;&#047;font&#062;  全部:&#060;font color=&#034;&#035;CC0000&#034;&#062;%2$s&#060;&#047;font&#062;)</string>
	<!-- UserLoginActivity -->
	<string name="userlogin_title">用户登录</string>
	<string name="userlogin_account_empty">请输入您的用户名</string>
	<string name="userlogin_pwd_empty">请输入您的密码</string>
	<string name="userlogin_login_bt_title">登录</string>
	<string name="userlogin_logining">登录中&#8230;&#8230;&#8230;</string>
	<string name="userlogin_login_sucess">登录成功</string>
	<string name="userlogin_login_error">登录失败:%1$s</string>
	<!-- UserChangePwdActivity -->
	<string name="userchangepwd_title">修改密码</string>
	<string name="userchangepwd_username">用户名</string>
	<string name="userchangepwd_pwd">旧密码</string>
	<string name="userchangepwd_newpwd">新密码</string>
	<string name="userchangepwd_renewpwd">确认新密码</string>
	<string name="userchangepwd_pwd_hit">请输入旧密码</string>
	<string name="userchangepwd_pwd_nowvalid">请输入正确旧密码</string>
	<string name="userchangepwd_newpwd_hit">请输入新密码</string>
	<string name="userchangepwd_newpwd_noequal_oldpwd">新密码不能和旧密码一样</string>
	<string name="userchangepwd_newpwd_noequal">新密码不一致</string>
	<string name="userchangepwd_changing">修改密码中&#8230;&#8230;&#8230;</string>
	<string name="userchangepwd_change_error">修改密码失败:%1$s</string>
	<string name="userchangepwd_change_sucess">修改密码成功</string>
	
	<!-- UserInfoListActivity -->
	<string name="userinfolist_consult_title">咨询信息</string>
	<string name="userinfolist_audit_title">审核结果</string>
	<string name="userinfolist_declare_title">申报进度</string>
	<string name="userinfolist_notifier_title">通知提醒</string>
	<string name="userinfolist_getdata_hit">正在获取%1$s中&#8230;&#8230;&#8230;</string>
	
	<!-- NewConsultActivity -->
	<string name="newconsult_title">新增咨询</string>
	<string name="newconsult_content_hit">请输入咨询信息，我们将尽快给予答复</string>
	<string name="newconsult_sendbt_text">提交</string>
	<string name="newconsult_sendconsult_hit">提交咨询信息中&#8230;&#8230;&#8230;</string>
	<string name="newconsult_sendconsult_errorhit">提交咨询信息失败:%1$s</string>
	<string name="newconsult_sendconsult_sucesshit">提交咨询信息成功</string>
	
	<!-- FavInfoActivity -->
	<string name="favinfo_title">我的收藏</string>
	<string name="favinfo_nodata">没有收藏的信息哦!</string>
	
	<!-- SettingActivity -->
	<string name="setting_title">系统设置</string>
	<!-- 通知栏提示信息 -->
	<string name="notify_pop_msg">收到新厦门服务外包网消息</string>
	<string name="notify_title">新厦门服务外包网消息</string>
	<string name="notify_detail">%s条未读厦门服务外包网消息</string>
	<string name="notify_prompt">请点击查看</string>
	<string name="notify_single_msg_detail">[%1$s]%2$s</string>
</resources>